I2PSnark: fixup z-index of status icons (all themes)

--- a/installer/resources/themes/snark/classic/snark.css
+++ b/installer/resources/themes/snark/classic/snark.css
@@ -997,7 +997,7 @@ td:first-child {
 .tooltipped {
   display: inline-block;
   position: relative;
-  z-index: 999;
+  z-index: 99;
   content: "";
 }
 
