--- a/installer/resources/themes/snark/light/snark.css
+++ b/installer/resources/themes/snark/light/snark.css
@@ -1745,7 +1745,7 @@ img[src$="details.png"] {
 .tooltipped {
   display: inline-block;
   position: relative;
-  z-index: 999;
+  z-index: 99;
   content: "";
 }
 
