--- a/installer/resources/themes/snark/zilvero/snark.css
+++ b/installer/resources/themes/snark/zilvero/snark.css
@@ -703,7 +703,7 @@ td.snarkGraphicStatus img {
 .tooltipped {
 	display: inline-block;
 	position: relative;
-	z-index: 999;
+	z-index: 99;
 	content: "";
 }
 
